fix: Correct spelling of "PROCCES" to "PROCESS" in BorrowUserServiceImp and BorrowServiceImpl classes
feat: Enhance MaterialsServiceImpl with detailed documentation and improved image handling

chore: Update application.properties to use environment variables for email configuration

fix: Modify SQL seed script to use INSERT IGNORE for idempotency and prevent duplicate entries

docs: Add Swagger documentation guide for API usage and security practices

feat: Implement OpenAPI configuration for Swagger UI integration

feat: Create OptimizedImageStorage for automatic image compression and resizing

feat: Introduce EnhancedImageValidationStrategy for improved image validation

chore: Add .gitkeep file to maintain uploaded-images directory in version control