@@ -1,16 +1,21 @@
 package com.techmate.techmate.Security;
 
-import java.util.*; // Importa todas las clases de java.util, incluyendo List y Collection
-import java.util.stream.Collectors; // Importa Collectors para usar collect
+import java.io.IOException;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.security.authentication.AuthenticationServiceException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-
-import com.fasterxml.jackson.databind.ObjectMapper;
-
-import java.io.IOException;
 
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -18,69 +23,110 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
 /**
- * Filtro de autenticación basado en JWT (JSON Web Token) que extiende
- * UsernamePasswordAuthenticationFilter para manejar el proceso de login.
+ * Filtro de autenticación JWT.
+ *
+ * Descripción general (flujo):
+ * 1) `attemptAuthentication` lee JSON {email, password} del body y crea un
+ *    UsernamePasswordAuthenticationToken que delega al AuthenticationManager.
+ * 2) Si la autenticación es correcta, `successfulAuthentication` se encarga de
+ *    generar el JWT (vía TokenUtils), añadirlo a la cabecera `Authorization`
+ *    y devolver también un JSON con datos mínimos (útil para SPAs).
+ *
+ * Buenas prácticas y motivos de diseño:
+ * - Leemos JSON en lugar de parámetros form para evitar el prompt de BasicAuth
+ *   y para facilitar clientes SPA que envían JSON.
+ * - Devolvemos el token tanto en cabecera como en el body JSON porque algunos
+ *   clientes prefieren leer directamente el JSON (easier testing) y otros usan
+ *   la cabecera; ambos enfoques están soportados.
+ * - No se llama a `super.successfulAuthentication` para evitar que Spring
+ *   desencadene comportamientos de login basados en sesiones (la app es
+ *   stateless y usa JWT).
+ * - IMPORTANTE: Siempre usar HTTPS en producción para evitar que el token sea
+ *   interceptado (TLS protege la cabecera y el body). Considerar refresh tokens
+ *   y revocación si necesitas logout/rotación de tokens.
  */
 public class JWTAuthenticationFilter extends UsernamePasswordAuthenticationFilter {
+
+    private static final Logger log = LoggerFactory.getLogger(JWTAuthenticationFilter.class);
 
     @Override
     public Authentication attemptAuthentication(HttpServletRequest request, HttpServletResponse response)
             throws AuthenticationException {
 
-        AuthCredentials authCredentials = new AuthCredentials();
+        AuthCredentials authCredentials;
 
         try {
+            // Leemos el cuerpo JSON y lo mapeamos a POJO. Esto permite que el
+            // frontend envíe { "email": "x", "password": "y" }.
+            // ObjectMapper lanza IOException si el payload no es JSON válido.
             authCredentials = new ObjectMapper().readValue(request.getReader(), AuthCredentials.class);
         } catch (IOException e) {
-            response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
-            return null;
+            log.warn("Attempted authentication with invalid payload: {}", e.getMessage());
+            // Devolver un error que Spring Security podrá transformar en 401/400 según configuración
+            throw new AuthenticationServiceException("Invalid authentication request payload");
         }
 
         UsernamePasswordAuthenticationToken usernamePAT = new UsernamePasswordAuthenticationToken(
                 authCredentials.getEmail(),
                 authCredentials.getPassword(),
-                Collections.emptyList());
+                List.of());
 
         return getAuthenticationManager().authenticate(usernamePAT);
     }
 
+    @Override
     protected void successfulAuthentication(HttpServletRequest request, HttpServletResponse response, FilterChain chain,
             Authentication authResult) throws IOException, ServletException {
 
+        // Obtenemos los detalles del usuario autenticado (implementación propia)
         UserDetailsImpl userDetails = (UserDetailsImpl) authResult.getPrincipal();
         Integer userId = userDetails.getUsuario().getId();
 
-         // Verificar si el usuario está verificado
-         /*if (!userDetails.getUsuario().isEnabled()) {
-            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED); // O el código de estado que prefieras
-            response.getWriter().write("Cuenta no verificada. Por favor verifica tu cuenta.");
-            return; 
+        // Seguridad adicional: si el usuario existe pero no está habilitado se
+        // devuelve 401 con un mensaje claro. Esto evita que usuarios no
+        // verificados obtengan tokens.
+        if (!userDetails.getUsuario().isEnabled()) {
+            log.info("Usuario {} inició sesión pero no está verificado", userDetails.getUsername());
+            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+            response.setContentType("application/json;charset=UTF-8");
+            Map<String, Object> payload = new HashMap<>();
+            payload.put("error", "Cuenta no verificada");
+            new ObjectMapper().writeValue(response.getWriter(), payload);
+            return;
         }
-*/
+
+        // Extraemos roles e ids de roles para incluirlos en el token si se desea
         List<Integer> roleIdList = userDetails.getIdRoles();
-
-        // Obtén los roles del usuario
         Collection<? extends GrantedAuthority> roles = userDetails.getRoles();
+        List<String> roleList = roles.stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList());
+        String userName = userDetails.getNombre();
 
-        // Convierte los roles a una lista de strings
-        List<String> roleList = roles.stream()
-                .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
-
-        // Aquí pasamos el username también al token, ahora que el método createToken lo
-        // acepta
-        String userName = userDetails.getNombre(); // Obtener el nombre de usuario
-
-        // Genera el token JWT usando el id, username (email), userName, roles y idRoles
+        // Generación del token: la implementación concreta está en TokenUtils.
+        // TokenUtils debe encargarse de:
+        // - Firmar el token con secret seguro
+        // - Añadir expiración (exp)
+        // - Incluir los claims necesarios (sub, id, roles)
         String token = TokenUtils.createToken(userId, userDetails.getUsername(), userName, roleList, roleIdList);
 
-        // Añade el token JWT a la cabecera de la respuesta con el prefijo "Bearer"
+        // Se añade la cabecera Authorization para compatibilidad con clientes que
+        // consumen la cabecera. Además devolvemos JSON con el token y datos
+        // mínimos para facilitar el consumo desde SPAs.
+        // Nota: en producción, usar siempre HTTPS para proteger este token.
         response.addHeader("Authorization", "Bearer " + token);
+        response.setContentType("application/json;charset=UTF-8");
 
-        // Flushea el buffer de salida (envía inmediatamente la respuesta)
-        response.getWriter().flush();
+        Map<String, Object> resp = new HashMap<>();
+        resp.put("token", "Bearer " + token);
+        resp.put("userId", userId);
+        resp.put("username", userDetails.getUsername());
+        resp.put("userName", userName);
+        resp.put("roles", roleList);
 
-        // Llama al método de la clase padre para completar la autenticación
-        super.successfulAuthentication(request, response, chain, authResult);
+        new ObjectMapper().writeValue(response.getWriter(), resp);
+
+        log.info("Usuario {} autenticado correctamente, id={}, roles={}", userDetails.getUsername(), userId, roleList);
+
+        // No llamamos a super.successfulAuthentication porque evitamos que Spring
+        // cree una sesión HTTP (la aplicación es stateless y gestiona auth con JWT).
     }
 }
